--- a/views/_layout/header.ejs
+++ b/views/_layout/header.ejs
@@ -19,10 +19,10 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="admin/pages">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Product</a>
+              <a class="nav-link" href="admin/pages/karyawan">Karyawan</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="#">Contact</a>
