--- a/views/_layout/header.ejs
+++ b/views/_layout/header.ejs
@@ -35,8 +35,4 @@
         </div>
       </nav>
     </header>
-    <h1>Hello, Shopeer </h1>
-
-    <div class="container">
-      <%- messages('messages', locals) %>
-    </div>
+    <h1>Hello, Shopeer guy's</h1>
